# happy-stock-api

./: .gitmessage.txt  Dockerfile  README.md  Taskfile.yml  alembic.ini  compose.yml  pyproject.toml  startup.sh
.github/workflows/: main_happy-stock.yml
migrations/: env.py  models.py
migrations/versions/: 60f4c6b7f79e_initial_migration.py
src/happy_stock_api/: __init__.py  gunicorn.py  main.py
